# gridmet_bmi

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CREDITS.md  MANIFEST.in  Makefile  README.md  environment.yaml  environment.yml  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
examples/: debug.py  debug2.py
gridmet_bmi/: __init__.py  bmi_gridmet.py
notebooks/: test_bmi_dev.ipynb
tests/: test_get_value.py  test_grid_info.py  test_irf.py
